0022972: Eliminate macro definitions that has compiler-provided analogs (WNT and so on) Replace removed from occt WNT preprocessor flag with _WIN32